GMic: parse and apply layer ordering and parameters

This implements the correct ordering for received layers and the
parameter specification as used by GMic.

BUG: 429851